# VoIP-Analyzer

./: .README.md.un~  .gitignore  CMakeLists.txt  LICENSE  README.md  adr.txt
audio/: README.md  readme
inputs/: readme
linux/: CMakeLists.txt  README.md
linux/inputs/: README.md
linux/source/: capture.cpp  capture.h  console_ui.cpp  packet_crafter.cpp  sip.cpp  sip.h  timer.cpp  timer.h
linux/source/rtp/: codec.cpp  codec.h  decode.cpp  decode.h  g711.h
outputs/: README.md  readme
outputs/sip/: README.md  readme
source/: capture.cpp  capture.h  console_ui.cpp  console_ui.h  main.cpp  packet_crafter.cpp  packet_crafter.h  sip.cpp  sip.h
source/rtp/: codec.cpp  codec.h  decode.cpp  decode.h  g711.h  rtp.cpp  rtp.h
source/rtp_decoder/: Makefile  README.md  codec.cpp  codec.h  decode.cpp  decode.h  net_header.h  pcap_reader.cpp  pcap_reader.h  tags
temp/: readme
temp/keyboard/: README.md  readme
win32/: README.md  VoIP Analyser.sln
win32/VoIP Analyser/: VoIP Analyser.vcxproj  VoIP Analyser.vcxproj.filters
win32/VoIP Analyser/source/: capture.cpp  console_ui.cpp  main.cpp  packet_crafter.cpp  sip.cpp  timer.cpp  timer.h
win32/VoIP Analyser/source/rtp/: decode.cpp  rtp.cpp  rtp.h
win32/VoIP Analyser/x64/Debug/: vc142.idb
win32/VoIP Analyser/x64/Debug/VoIP Analyser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoIP Analyser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win32/VoIP Analyser/x64/Release/VoIP Analyser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoIP Analyser.lastbuildstate  VoIP Analyser.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win32/includes/tins/: bootp.h  config.h  pdu.h
win32/temp/: README.md
